Funciones ya definidas

--- a/cursos/espanol/programacion/teoria/5_funciones.ipynb
+++ b/cursos/espanol/programacion/teoria/5_funciones.ipynb
@@ -246,11 +246,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
     "assert menor(3,5) == 3, \"Error en el Test 1\"\n",
     "assert menor(20,11) == 11, \"Error en el Test 2\"\n",
     "assert menor(-10,-30) == -30, \"Error en el Test 3\"\n",
     "assert menor(15,15) == 15, \"Error en el Test 4\"\n",
-    "\"Felicitaciones todos los casos fueron pasados exitosamente!!\""
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
    ]
   },
   {
@@ -283,11 +285,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
     "assert menor(3,5) == 3, \"Error en el Test 1\"\n",
     "assert menor(20,11) == 11, \"Error en el Test 2\"\n",
     "assert menor(-10,-30) == -30, \"Error en el Test 3\"\n",
     "assert menor(15,15) == 15, \"Error en el Test 4\"\n",
-    "\"Felicitaciones todos los casos fueron pasados exitosamente!!\""
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
    ]
   },
   {
@@ -329,11 +333,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
     "assert es_par(1) == False, \"Error en el Test 1\"\n",
     "assert es_par(2) == True, \"Error en el Test 2\"\n",
     "assert es_par(11) == False, \"Error en el Test 3\"\n",
     "assert es_par(10004) == True, \"Error en el Test 4\"\n",
-    "\"Felicitaciones todos los casos fueron pasados exitosamente!!\""
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
    ]
   },
   {
