--- a/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb
+++ b/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb
@@ -10,126 +10,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "### Funcion len() me devuelve el largo de un texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "len(\"este es un texto corto\") "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "max(4,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(3,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(\"4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola\n",
-      "mundo\n",
-      "de la\n",
-      "Computacion\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hola\")\n",
-    "print(\"mundo\")\n",
-    "print(\"de la\")\n",
-    "print(\"Computacion\")"
+    "### Ejercicio 1:\n",
+    "\n",
+    "Usar la funcion len() para obtener el largo de la palabra \"elefante\""
    ]
   },
   {
@@ -140,62 +42,39 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Funciones ya definindas\n",
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
     "\n",
-    "Existen muchas funciones que ya estan definidas y que las podemos usar. Por ejemplo para saber la cantidad de caracteres (letras, numeros y simbolos) que tiene un texto usamos la funcion ***len(\"mi texto\")***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(\"buenos dias\")"
+    "len(\"elefante\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para mostrar mas de un resultado utilizamos la funcion print()"
+    "### Funcion max() me devuelve el mayor valor de dos o mas elementos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola, soy una computadora superinteligente.\n",
-      "La respuesta a cual es el sentido del universo es:\n",
-      "42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "saludo = \"Hola, soy una computadora superinteligente.\"\n",
-    "respuesta = 42\n",
-    "print(saludo)\n",
-    "print(\"La respuesta a cual es el sentido del universo es:\")\n",
-    "print(respuesta)"
+    "max(4,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(5,6,7,8)"
    ]
   },
   {
@@ -204,7 +83,7 @@
    "source": [
     "### Ejercicio 2:\n",
     "\n",
-    "Crear una funcion feliz_cumple que reciba dos variables, nombre y edad y que imprima usando la funcion print el siguiente texto:"
+    "Usar la funcion max() para mostrar el mayor de los siguientes numeros: 0.234, -20.3, 0.295 "
    ]
   },
   {
@@ -222,9 +101,14 @@
    "source": [
     "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
-    "def feliz_cumple(nombre, edad):\n",
-    "    print(\"Feliz Cumpleanos\", nombre)\n",
-    "    print()"
+    "max(0.234, -20.3, 0.295)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion min() me devuelve el menor valor de dos o mas elementos"
    ]
   },
   {
@@ -232,21 +116,320 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "min(3,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion int() me convierte un texto en un valor entero si es posible"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "int(\"42\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion float() me convierte un texto en un valor numerico con decimales si es posible"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "float(\"42.53\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion str() me convierte un numero en un texto (tambien llamado string en ingles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(345)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importante: \n",
+    "\n",
+    "Si sumamos dos variables de tipo texto se concatenan es decir se pega una al lado de la otra para crear una sola. Veamos un ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Hola\" + \"Mundo\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y si utilizamos variables de texto y ponemos numeros sucede lo mismo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"10\" + \"20\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora si primero convertimos estos textos a numeros usando la funcion int() el resultado cambia:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(\"10\") + int(\"20\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y la funcion str() funciona de la forma inversa:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "10 + 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(10) + str(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3:\n",
+    "\n",
+    "Escribir el contenido de la funcion sumar_numeros_de_textos(s1,s2) para que devuelva la suma del valor numerico de la suma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar_numeros_de_textos(s1,s2):\n",
+    "    # Escribir la solucion aqui:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert sumar_numeros_de_textos(\"1\",\"2\") == 3, \"Error en el Test 1\"\n",
+    "assert sumar_numeros_de_textos(\"-20\",\"30\") == 10, \"Error en el Test 2\"\n",
+    "assert sumar_numeros_de_textos(\"-2\",\"-1\") == -3, \"Error en el Test 3\"\n",
+    "assert sumar_numeros_de_textos(\"1000\",\"2000\") == 3000, \"Error en el Test 4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
+    "\n",
+    "def sumar_numeros_de_textos(s1,s2):\n",
+    "    salida = int(s1) + int(s2)\n",
+    "    return salida"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funcion print() me permite mostrar mas de un solo resultado al ejecutar una celda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saludo = \"Hola, soy una computadora superinteligente.\"\n",
+    "respuesta = 42\n",
+    "print(saludo)\n",
+    "print(\"La respuesta a cual es el sentido del universo es:\")\n",
+    "print(respuesta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 4:\n",
+    "\n",
+    "Usar la funcion print() para mostrar uno abajo de otro los valores de las siguientes variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable1 = 123456789\n",
+    "variable2 = \"la funcion print es muy util para ver el valor de las variables\"\n",
+    "variable3 = 0.35\n",
+    "variable4 = \"tambien es util para ir viendo como se modifican los valores de las variables\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 4 {display-mode:\"form\"}\n",
+    "\n",
+    "print(variable1)\n",
+    "print(variable2)\n",
+    "print(variable3)\n",
+    "print(variable4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tambien puedo mostrar el valor de varias variables uno al lado de otro si utilizo la funcion print() y separo las variables con una coma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(variable1, variable2, variable3, variable4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La funcion print() es util para ver como se va modificando el valor de una variable\n",
+    "\n",
+    "Veamos como va cambiando el valor de la variable **x**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "print(x)\n",
+    "\n",
+    "x = x + 2\n",
+    "print(x)\n",
+    "\n",
+    "if x > 100:\n",
+    "    x += 1000\n",
+    "    print(\"Es mayor a cien entonces le sumo 1000\")\n",
+    "else:\n",
+    "    x += 5000\n",
+    "    print(\"Es menor a cien entonces le sumo 5000\")\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Veamos otro ejemplo viendo como se modifica una variable adentro de un **while**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = 10\n",
+    "while y < 20:\n",
+    "    print(y)\n",
+    "    y = y + 2\n",
+    "print(\"El valor final de y es:\", y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Como recordar las funciones ya definidas\n",
+    "\n",
+    "Sera imposible acordarnos de memoria todas las funciones que existen ya definidas por lo que es recomendado utilizar internet si queremos recordar como funcionan ellas o si queremos encontrar nuevas funciones. Los sitios recomendados para buscar son:\n",
+    "\n",
+    "- [ChatGPT](https://chat.openai.com/): es el famoso bot al cual le podemos hacer preguntas\n",
+    "- [Google](https://www.google.com/): el famoso buscador\n",
+    "- [Stackoverflow.com](https://stackoverflow.com/): es un sitio web donde los programadores hacen preguntas y otros programadores responden con sus soluciones"
+   ]
   },
   {
    "cell_type": "markdown",
