listas y for added

--- a/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb
+++ b/cursos/espanol/programacion/teoria/6_funciones_ya_definidas.ipynb
@@ -269,10 +269,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
     "assert sumar_numeros_de_textos(\"1\",\"2\") == 3, \"Error en el Test 1\"\n",
     "assert sumar_numeros_de_textos(\"-20\",\"30\") == 10, \"Error en el Test 2\"\n",
     "assert sumar_numeros_de_textos(\"-2\",\"-1\") == -3, \"Error en el Test 3\"\n",
-    "assert sumar_numeros_de_textos(\"1000\",\"2000\") == 3000, \"Error en el Test 4\""
+    "assert sumar_numeros_de_textos(\"1000\",\"2000\") == 3000, \"Error en el Test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
    ]
   },
   {
@@ -424,11 +427,84 @@
    "source": [
     "## Como recordar las funciones ya definidas\n",
     "\n",
-    "Sera imposible acordarnos de memoria todas las funciones que existen ya definidas por lo que es recomendado utilizar internet si queremos recordar como funcionan ellas o si queremos encontrar nuevas funciones. Los sitios recomendados para buscar son:\n",
+    "Sera imposible acordarnos de memoria todas las funciones que existen ya definidas por lo que es recomendado utilizar internet si queremos recordar como funcionan o si queremos encontrar nuevas funciones. Los sitios recomendados para buscar son:\n",
     "\n",
     "- [ChatGPT](https://chat.openai.com/): es el famoso bot al cual le podemos hacer preguntas\n",
     "- [Google](https://www.google.com/): el famoso buscador\n",
     "- [Stackoverflow.com](https://stackoverflow.com/): es un sitio web donde los programadores hacen preguntas y otros programadores responden con sus soluciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funciones incorporadas a las variables\n",
+    "\n",
+    "A veces las variables tambien tienen incorporadas funciones ya definidas que podemos usar. Por ejemplo las variables de tipo string tienen varias funciones utiles incorporadas. Estas se utilizan escribiendo el nombre de la variable un punto y luego el nombre de la funcion. A continuacion algunos ejemplos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto1 = \"EqUiLaTeRo\"\n",
+    "print(texto1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion incorporada .lower() convierte la string a minuscula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto2 = texto1.lower()\n",
+    "print(texto1)\n",
+    "print(texto2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion incorporada .lower() convierte la string a minuscula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto2 = texto1.upper()\n",
+    "print(texto1)\n",
+    "print(texto2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funcion incorporada .replace() reemplaza una parte de la string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto2 = texto1.replace(\"LaTeRo\",\"distante\")\n",
+    "print(texto1)\n",
+    "print(texto2)"
    ]
   },
   {
