--- a/cursos/espanol/programacion/teoria/7_listas.ipynb
+++ b/cursos/espanol/programacion/teoria/7_listas.ipynb
@@ -180,6 +180,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92c05c27-024d-40c1-a612-22d3ae8fcad4",
+   "metadata": {},
+   "source": [
+    "#### Errores: \n",
+    "\n",
+    "Si intentamos acceder a una posicion mayor al numero de elementos en la lista veremos un error llamado \"index out of range\" que quiere decir que la posicion a la que intentamos acceder esta fuera de rango, es decir, no existe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9629f778-2cf9-4355-8444-dba9945ccc3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precio_articulos[7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "50318ff6-2222-4f55-ab41-4a25b0edc46a",
    "metadata": {},
    "source": [
@@ -194,7 +214,10 @@
    "id": "59013a72-d605-48a0-a389-b7603a38c1f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -276,7 +299,10 @@
    "id": "dc272871-7b38-4c54-902e-9167d539166a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -285,12 +311,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
     "lista = []\n",
     "lista.append(\"ave\")\n",
     "lista.append(\"mamifero\")\n",
     "lista.append(\"reptil\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "320be131-53b4-47df-b319-a76ede42031c",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2.1:\n",
+    "\n",
+    "Utiliza los corchetes y el numero de la posicion para mostrar el valor que se encuentra en la ultima posicion. El resultado mostrado deberia ser \"reptil\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac99f26a-37de-4576-b185-acaceded713b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f899f757-ceec-47ba-84b7-e43b8b294b5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 2.1 {display-mode:\"form\"}\n",
+    "\n",
+    "print(lista[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6acb035-3b4f-4d38-8891-d228e3f99951",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2.2:\n",
+    "\n",
+    "Utiliza los corchetes y el numero de la posicion para cambiar el valor de la posicion 1 que es \"mamifero\" por \"marsupial\" y luego utilizar print para mostrar todos los valores de la lista. El resultado mostrado deberia ser ['ave', 'marsupial', 'reptil']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f00be3-8167-4f32-aa36-a585ca69b4cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44b3fbfa-7d8b-4e4f-b223-4158643eb2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 2.2 {display-mode:\"form\"}\n",
+    "\n",
+    "lista[1] = \"marsupial\"\n",
+    "print(lista)"
    ]
   },
   {
@@ -361,7 +454,10 @@
    "id": "44133717-417b-4daf-bea1-f36432eb5bcb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -419,7 +515,10 @@
    "id": "eca9ace8-2e29-4078-a56d-aa1f1f0463f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -469,7 +568,10 @@
    "id": "3d6bb70b-235a-46a1-ba67-d82c72b82a55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -517,7 +619,10 @@
    "id": "01236c78-29ed-4c35-953c-aafdc6af3e01",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
