--- a/cursos/espanol/programacion/teoria/8.1_for_y_while.ipynb
+++ b/cursos/espanol/programacion/teoria/8.1_for_y_while.ipynb
@@ -5,7 +5,11 @@
    "id": "4fd8851e-8615-492f-ad9b-89b33e6d26e6",
    "metadata": {},
    "source": [
-    "# Todo lo que hago con un for lo puedo hacer con un while"
+    "# Todo lo que hago con un for lo puedo hacer con un while\n",
+    "\n",
+    "Todo lo que puedo hacer con un bucle for lo puedo hacer con un bucle while pero al reves no es verdad. Algunos bucles while no pueden ser reemplazados por un bucle for. \n",
+    "\n",
+    "Aun asi siempre que sea posible utilizaremos un bucle for porque hace mas facil de entender el codigo y evita que entremos en lo que se llaman bucles infinitos, es decir, bucles que no terminan nunca."
    ]
   },
   {
