--- a/cursos/espanol/programacion/teoria/8_for.ipynb
+++ b/cursos/espanol/programacion/teoria/8_for.ipynb
@@ -82,7 +82,10 @@
    "id": "640a026f-c3b5-478a-9625-2efaa1f49539",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -117,7 +120,9 @@
    "outputs": [],
    "source": [
     "def contar_positivos(lista):\n",
-    "    # Escribir aqui la solucion"
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -171,7 +176,9 @@
    "outputs": [],
    "source": [
     "def contar_pares(lista):\n",
-    "    # Escribir aqui la solucion"
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -225,7 +232,9 @@
    "outputs": [],
    "source": [
     "def sumar_pares(lista):\n",
-    "    # Escribir aqui la solucion"
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -263,12 +272,274 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b5709cf1-f7b3-4081-a2b4-5cf71acfcd29",
+   "metadata": {},
+   "source": [
+    "## Combinando for y range()\n",
+    "\n",
+    "Ahora utilizaremos **for** en combinacion con la funcion **range()** para tener mas control sobre las listas que querramos utilizar. Recordemos que podemos acceder a los elementos de una lista utilizando los corchetes y el numero de la posicion de un elemento en la lista, por ejemplo usando **lista[2]** podemos acceder al tercer elemento ya que siempre comenzamos a contar desde cero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1a75fee-eff6-491a-8c5a-038f7bd08cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [10,20,30,40,50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "836901b9-08c1-458b-b6f5-afc2bdb9ed43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for posicion in [0,1,2,3,4]:\n",
+    "    lista[posicion] = lista[posicion] + 1\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cca7d7d-2bc8-4de3-8575-f90b391a27a3",
+   "metadata": {},
+   "source": [
+    "Notemos que utilizamos dos listas: una que contiene los valores que queremos modificar y una lista con los valores del 0 al 4 que son las posiciones de cada elemento de la lista que queremos modificar. Veamos ahora como modificar solamente los tres primeros valores:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "085de5c5-85d8-41cf-8876-5e820f9a0e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for posicion in [0,1,2]:\n",
+    "    lista[posicion] = lista[posicion] + 500\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff5b80e-c2cd-4d7d-a24f-6cc5332653c2",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 5:\n",
+    "\n",
+    "Crear una funcion **sumar_elementos(elementos, posiciones)** que reciba dos listas y que sume solamente los valores de la lista **elementos** que se encuentran en la lista **posiciones** y que devuelva dicha suma.\n",
+    "\n",
+    "**Ejemplo:** \n",
+    "\n",
+    "si la lista **elementos** es [10,20,30,40,50,60,70] \n",
+    "\n",
+    "y la lista **posiciones** es [1,3,6] \n",
+    "\n",
+    "entonces deberemos sumar **elementos[1] + elementos[3] + elementos[6]** \n",
+    "\n",
+    "esto seria igual a **20 + 40 + 70 = 130**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "978ceb58-d74e-4fe2-88cb-68ac6986cd2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar_elementos(elementos, posiciones):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c3d51e2-84d0-4c91-a472-b0a54fcf4abf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert sumar_elementos([10,20,30,40,50,60,70],[1,3,6]) == 130, \"Error en el Test 1\"\n",
+    "assert sumar_elementos([10,20,30,40,50,60,70],[]) == 0, \"Error en el Test 2\"\n",
+    "assert sumar_elementos([10,20,30,40,50,60,70],[0,6]) == 80, \"Error en el Test 3\"\n",
+    "assert sumar_elementos([10,20,30,40,50,60,70],[4]) == 50, \"Error en el Test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f9fb1ef-6e70-4886-b09a-134e987231da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
+    "\n",
+    "def sumar_elementos(elementos, posiciones):\n",
+    "    suma_total = 0\n",
+    "    for p in posiciones:\n",
+    "        suma_total = suma_total + elementos[p]\n",
+    "    return suma_total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e953f24c-1bc1-4f30-a47c-de945d3e55af",
+   "metadata": {},
+   "source": [
+    "Ahora veamos como podemos hacer lo mismo utilizando la funcion range()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14d6f313-c973-45a7-8e74-114a27ee9a90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista2 = [10,20,30,40,50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f867c8ab-4a60-46e5-b973-b3dd42f3de6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for posicion in range(5):\n",
+    "    lista2[posicion] = lista2[posicion] + 1\n",
+    "print(lista2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aebf3e2-d8f2-4247-9283-8de60cb3b4b1",
+   "metadata": {},
+   "source": [
+    "Notemos que cuando usamos la funcion range() luego del for in no hace falta convertir su resultado a lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b18630d-38c3-4b27-a8ac-ce9e4729ec07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for posicion in range(3):\n",
+    "    lista2[posicion] = lista2[posicion] + 500\n",
+    "print(lista2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7b22d3d-6ff4-4edc-83a5-8553b14a1635",
+   "metadata": {},
+   "source": [
+    "Por ultimo notemos que podemos usar **range()** en conbinacion con **len()** para acceder a todos los elementos de una lista mediante su posicion o indice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc3da70a-a631-4171-ba9d-7bfb9c14023f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista3 = [10,20,30,40,50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d1ff15f-8675-4575-9bf7-e28729b12390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for posicion in range(len(lista3)):\n",
+    "    lista3[posicion] = lista3[posicion] + 1000\n",
+    "print(lista3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "701603b7-8cd4-4b1c-9714-55e5183c2fc8",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 6:\n",
+    "\n",
+    "Crear una funcion **sumar_pos_pares(valores)** que reciba una lista y que sume solamente los valores de la lista que se encuentran en posiciones pares [0,2,4,...] y que devuelva dicha suma.\n",
+    "\n",
+    "**Ejemplo:** \n",
+    "\n",
+    "si la lista **valores** es [10,20,30,40,50,60,70] \n",
+    "\n",
+    "las posiciones pares son es [0,2,4,6] (pensar como utilizar la funcion range(inicio, fin, incremento) en combinacion con len(valores) para generar esta lista de posiciones pares)\n",
+    "\n",
+    "entonces deberemos sumar **elementos[0] + elementos[2] + elementos[4]  + elementos[6]** \n",
+    "\n",
+    "esto seria igual a **10 + 30 + 50 + 70 = 160**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d25af3-2fef-41dc-ae60-8a2cad4ace3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar_pos_pares(valores):\n",
+    "    #@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25f4086d-f5d5-44c0-b0ef-9615b4685ac4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert sumar_pos_pares([10,20,30,40,50,60,70]) == 160, \"Error en el Test 1\"\n",
+    "assert sumar_pos_pares([1,2,3,4,5,6,7,8,9,10]) == 25, \"Error en el Test 2\"\n",
+    "assert sumar_pos_pares([]) == 0, \"Error en el Test 3\"\n",
+    "assert sumar_pos_pares([99]) == 99, \"Error en el Test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e41b13e-1a0f-48ea-99ae-84f7283ece88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 6 {display-mode:\"form\"}\n",
+    "\n",
+    "def sumar_pos_pares(valores):\n",
+    "    suma_total = 0\n",
+    "    for i in range(0,len(valores),2):\n",
+    "        suma_total = suma_total + valores[i]\n",
+    "    return suma_total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a8b144bf-a78a-48b2-8d84-83dcb09794b0",
    "metadata": {},
    "source": [
     "## Salir del bucle for antes de tiempo\n",
     "\n",
-    "La palabra **break** que significa romper en ingles nos permite salir del bucle for antes de tiempo si es necesario. Tambien sirve para el bucle **while**. Si bien a veces es util es una buena practica tratar de evitar usarla mucho."
+    "La palabra **break** que significa romper en ingles nos permite salir del bucle for antes de tiempo si es necesario. Tambien sirve para el bucle **while**. Si bien a veces es util es una buena practica tratar de evitar usarla."
    ]
   },
   {
@@ -313,7 +584,7 @@
    "id": "0789e829-2a34-430f-bd85-a908a692ccf4",
    "metadata": {},
    "source": [
-    "### Ejercicio 5:\n",
+    "### Ejercicio 7:\n",
     "\n",
     "Crear una funcion sumar_pares_hasta_impar(lista) que sume los elementos de una lista que son pares hasta que aparezca un numero impar y que devuelva dicha suma."
    ]
@@ -326,7 +597,9 @@
    "outputs": [],
    "source": [
     "def sumar_pares_hasta_impar(lista):\n",
-    "    # Escribir aqui la solucion"
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -352,7 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 7 {display-mode:\"form\"}\n",
     "\n",
     "def sumar_pares_hasta_impar(lista):\n",
     "    suma_total = 0\n",
