--- a/cursos/espanol/programacion/4_while.ipynb
+++ b/cursos/espanol/programacion/4_while.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "### Ejercicio 1:\n",
     "\n",
-    "Crear un while que le sume 1 a la variable x hasta que llegue a 10"
+    "Crear un while que le sume 1 a la variable x1 hasta que llegue a 10"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "\n",
     "Probemos la velocidad de la computadora:\n",
     "    \n",
-    "Crear un while que le sume 1 a la variable x hasta que llegue a 1 millon!"
+    "Crear un while que le sume 1 a la variable x2 hasta que llegue a 1 millon!"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "source": [
     "### Ejercicio 3:\n",
     "\n",
-    "Crear un while que le sume 3 a la variable mientras sea menor a 10. Adivinar cual va a ser el valor final de la variable x cuando finalice el while"
+    "Crear un while que le sume 3 a la variable x3 mientras sea menor a 10. Adivinar cual va a ser el valor final de la variable x cuando finalice el while"
    ]
   },
   {
